# langgraph2

./: README.md  langgraph.json  pyproject.toml
notebooks/: 01-notebook.ipynb  02-notebook.ipynb  04-notebook.ipynb  06-notebook-chain copy.ipynb  06-notebook-chain.ipynb  07-structured-output copy.ipynb  08-prompting.ipynb  10-ReAct-pattern.ipynb  12-parallization.ipynb
src/agents/: code_review.py  main.py  rag.py  react.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: node.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/nodes/routes/intent/: prompt.py  route.py
src/agents/support/nodes/weather/: node.py  prompt.py  tools.py
src/agents/walt/: agent.py  state.py
src/agents/walt/nodes/action/: node.py  prompt.py  tools.py
src/agents/walt/nodes/conversation/: node.py  prompt.py
src/agents/walt/nodes/query/: node.py  prompt.py  tools.py
src/agents/walt/nodes/routes/intent/: prompt.py  route.py
